--- a/ansible/run.yml
+++ b/ansible/run.yml
@@ -2,7 +2,7 @@
 - hosts: local
   connection: local
   vars_files:
-      - runtime_vars.yml
+      - run-vars.yml
   roles:
       - facts
       - nodejs
